<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_main"
            android:title="@string/menu_main"
            android:icon="@drawable/ic_menu_main" />
        <item
            android:id="@+id/nav_music"
            android:title="@string/menu_music"
            android:icon="@drawable/ic_menu_music"/>
        <item
            android:id="@+id/nav_video"
            android:title="@string/menu_video"
            android:icon="@drawable/ic_menu_video"/>
        <item
            android:id="@+id/nav_setting"
            android:icon="@drawable/ic_menu_setting"
            android:title="@string/menu_setting"
            />
    </group>

</menu>
